--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -548,6 +548,14 @@
       headers: {'Content-Type': 'application/json'},
       body: JSON.stringify({alias: oldParent, parent: newParent})
     });
+
+    const mappedSection = document.getElementById('mapped');
+    const mergedSection = document.getElementById('merged');
+    if (card.closest('#mapped')) {
+      mappedSection.prepend(card);
+    } else if (card.closest('#merged')) {
+      mergedSection.prepend(card);
+    }
   }
 
   function setupParentSelect(select){
