Add duplicate transaction review

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,7 @@
           <a class="mdc-button" href="/sku-map">SKU map</a>
           <a class="mdc-button" href="/sku-details">SKU details</a>
           <a class="mdc-button" href="/monthly-report">Reports</a>
+          <a class="mdc-button" href="/duplicates">Duplicates</a>
           <a class="mdc-button" href="/settings">Settings</a>
         </div>
       </section>
