Filter unmapped SKUs

--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -4,7 +4,7 @@
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU alias mapping</h2>
     <nav class="buttons tab-buttons mb-4" id="mapTabs">
-      <button type="button" class="mdc-button mdc-button--raised is-active" data-target="map">Mapping ({{ grouped|length }})</button>
+      <button type="button" class="mdc-button mdc-button--raised is-active" data-target="map">Unmapped ({{ grouped|length }})</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="mapped">Mapped ({{ mapped|length }})</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="merged">Merged ({{ merged|length }})</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="sug">Suggestions ({{ suggestions|length }})</button>
