--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,9 +38,8 @@
           <a class="mdc-button" href="/">Dashboard</a>
           <a class="mdc-button" href="/upload">Upload data</a>
           <a class="mdc-button" href="/sku-map">SKU map</a>
-          <a class="mdc-button" href="/sku-details">SKU details</a>
+          <a class="mdc-button" href="/transactions">Transactions</a>
           <a class="mdc-button" href="/monthly-report">Reports</a>
-          <a class="mdc-button" href="/duplicates">Duplicates</a>
           <a class="mdc-button" href="/settings">Settings</a>
         </div>
       </section>
